[package]
name = "cafemq"
version = "0.1.0"
authors = ["ifTNT <happyjohn369@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zmq = "^0.9.2"
hex = "^0.3.1"
rand = "^0.7.3"
rand_distr = "^0.2.2"
num-complex = "^0.2.4"
bencher = "^0.1.5"

[[bench]]
name = "awgn"
harness = false

[[bench]]
name = "binary_complex"
harness = false